; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/nvme/extr_nvme_xpt.c_nvme_alloc_device.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/nvme/extr_nvme_xpt.c_nvme_alloc_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvme_quirk_entry = type { i32 }
%struct.cam_ed = type { i64, i32*, i64, i32*, i64, i64, i64, i64, i8* }
%struct.cam_eb = type { i32 }
%struct.cam_et = type { i32 }

@nvme_quirk_table = common dso_local global %struct.nvme_quirk_entry* null, align 8
@nvme_quirk_table_size = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cam_ed* (%struct.cam_eb*, %struct.cam_et*, i32)* @nvme_alloc_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cam_ed* @nvme_alloc_device(%struct.cam_eb* %0, %struct.cam_et* %1, i32 %2) #0 {
  %4 = alloca %struct.cam_ed*, align 8
  %5 = alloca %struct.cam_eb*, align 8
  %6 = alloca %struct.cam_et*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.nvme_quirk_entry*, align 8
  %9 = alloca %struct.cam_ed*, align 8
  store %struct.cam_eb* %0, %struct.cam_eb** %5, align 8
  store %struct.cam_et* %1, %struct.cam_et** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load %struct.cam_eb*, %struct.cam_eb** %5, align 8
  %11 = load %struct.cam_et*, %struct.cam_et** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call %struct.cam_ed* @xpt_alloc_device(%struct.cam_eb* %10, %struct.cam_et* %11, i32 %12)
  store %struct.cam_ed* %13, %struct.cam_ed** %9, align 8
  %14 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %15 = icmp eq %struct.cam_ed* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store %struct.cam_ed* null, %struct.cam_ed** %4, align 8
  br label %44

17:                                               ; preds = %3
  %18 = load %struct.nvme_quirk_entry*, %struct.nvme_quirk_entry** @nvme_quirk_table, align 8
  %19 = load i32, i32* @nvme_quirk_table_size, align 4
  %20 = sub nsw i32 %19, 1
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.nvme_quirk_entry, %struct.nvme_quirk_entry* %18, i64 %21
  store %struct.nvme_quirk_entry* %22, %struct.nvme_quirk_entry** %8, align 8
  %23 = load %struct.nvme_quirk_entry*, %struct.nvme_quirk_entry** %8, align 8
  %24 = bitcast %struct.nvme_quirk_entry* %23 to i8*
  %25 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %26 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %25, i32 0, i32 8
  store i8* %24, i8** %26, align 8
  %27 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %28 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %27, i32 0, i32 7
  store i64 0, i64* %28, align 8
  %29 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %30 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %29, i32 0, i32 6
  store i64 0, i64* %30, align 8
  %31 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %32 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %31, i32 0, i32 5
  store i64 0, i64* %32, align 8
  %33 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %34 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %33, i32 0, i32 4
  store i64 0, i64* %34, align 8
  %35 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %36 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %35, i32 0, i32 3
  store i32* null, i32** %36, align 8
  %37 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %38 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %37, i32 0, i32 2
  store i64 0, i64* %38, align 8
  %39 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %40 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %39, i32 0, i32 1
  store i32* null, i32** %40, align 8
  %41 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  %42 = getelementptr inbounds %struct.cam_ed, %struct.cam_ed* %41, i32 0, i32 0
  store i64 0, i64* %42, align 8
  %43 = load %struct.cam_ed*, %struct.cam_ed** %9, align 8
  store %struct.cam_ed* %43, %struct.cam_ed** %4, align 8
  br label %44

44:                                               ; preds = %17, %16
  %45 = load %struct.cam_ed*, %struct.cam_ed** %4, align 8
  ret %struct.cam_ed* %45
}

declare dso_local %struct.cam_ed* @xpt_alloc_device(%struct.cam_eb*, %struct.cam_et*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
